fix: Fix display of Filter Results on small width screens
The orientation of the filter results settings changes to give a
much better appearance on very small screen sizes.

--- a/css/styles.css
+++ b/css/styles.css
@@ -398,3 +398,14 @@ nav h1 a {
   }
 
 }
+
+@media screen and (max-width: 425px) {
+  .filter-options {
+    flex-direction: column;
+    height: 120px;
+  }
+
+  .filter-options h2 {
+    margin-top: 4px;
+  }
+}
